fix style presentation on safari and spin speed

--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -112,17 +112,14 @@
   box-shadow: 0 2px 5px 0 rgba(0,0,0,.26);
   color: rgb(255,255,255);
   height: 56px;
-  line-height: 56px;
-  min-width: 0;
   position: fixed;
   right: 15px;
-  transition-property: background-color,box-shadow;
+  transition-property: opacity;
   transition: .2s linear;
   width: 56px;
   z-index: 20;
   background-clip: padding-box;
   overflow: hidden;
-  vertical-align: middle;
   box-sizing: border-box;
   white-space: nowrap;
   cursor: pointer;
@@ -131,8 +128,8 @@
   display: flex;
   flex-direction: row;
   text-decoration: none;
-  outline: 0;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
+  font-size: 13px;
 
   @media screen and (min-width: 768px) {
     bottom: initial;
@@ -142,6 +139,11 @@
 
   &:disabled, &[disabled] {
     opacity: 0.3;
+  }
+
+  &.fa-spin {
+    -webkit-animation: fa-spin 1s infinite linear;
+    animation: fa-spin 1s infinite linear;
   }
 }
 
